--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@ h1 {
 }
 
 li {
-  padding: 0;
-  margin: 0;
+  padding: 5px;
+  margin: 5px;
 }
 
 p {
@@ -59,28 +59,28 @@ p {
   width: 100%;
   max-width: 500px; 
   height: 100%;
-  background-size: cover;
+  background-size: contain;
   box-shadow: 0 0 6px #C8A2C8;
   padding: 5px;
   margin: 5px;
 }
 
 .images {
-  columns: 4;
   list-style-type: none;
   background: lightgrey;
   padding: 5px;
   margin: 5px;
   background: no-repeat center;
   background-size: contain;
-  display: inline-block;
-  
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
 }
 
 .columns {
-  padding: 0;
-  margin: 0;
-  
+  padding: 5px;
+  margin: 5px;
+
 }
 
 .footer {
@@ -124,7 +124,7 @@ p {
   display: table;
 }
 
-@media  (max-width: 1900px) {
+/* @media  (max-width: 1900px) {
   body {
     width: 100%;
   }
@@ -168,4 +168,4 @@ p {
     width: 92%;
     height: auto;
   }
-}
+} */
