--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,8 @@ p {
   text-align: center;
 }
 
+img {max-width:100%;}
+
 .backgroundcolor {
   background: linear-gradient(transparent, #C8A2C8)
 } 
@@ -56,9 +58,7 @@ p {
 
 
 .resize {
-  width: 100%;
-  max-width: 500px; 
-  height: 100%;
+  /* max-width: 50%; */
   background-size: contain;
   box-shadow: 0 0 6px #C8A2C8;
   padding: 5px;
@@ -75,6 +75,9 @@ p {
   flex-wrap: wrap;
   display: flex;
   justify-content: center;
+  flex-shrink: inherit;
+  align-self: center;
+
 }
 
 .columns {
