--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,13 @@ img {max-width:100%;}
   text-shadow: 2px 2px white;
 }
 
+.preference {
+  text-align: center;
+}
+
+.checked {
+  display: none;
+}
 
 .resize {
   /* max-width: 50%; */
@@ -63,6 +70,7 @@ img {max-width:100%;}
   box-shadow: 0 0 6px #C8A2C8;
   padding: 5px;
   margin: 5px;
+  height: 400px;
 }
 
 .images {
@@ -77,7 +85,8 @@ img {max-width:100%;}
   justify-content: center;
   flex-shrink: inherit;
   align-self: center;
-
+  object-fit: contain;
+ 
 }
 
 .columns {
