--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,9 @@ body {
 h1 {
   color: #b5c8a2;
   text-shadow: 2px 2px 4px white;
-  text-align: center;
-  padding: 0;
+  text-align: left;
+  padding: 0 50px;
+  font-size: 50px;
 }
 
 li {
@@ -46,7 +47,7 @@ img {max-width:100%;}
 .recipes {
   text-align: center;
   padding: 5px;
-  margin-top: 10px;
+  margin-top: 15px;
   font-family: Goudy Old Style,Garamond,Big Caslon,Times New Roman,serif; 
   font-size: 50px; 
   font-style: italic; 
@@ -134,6 +135,15 @@ img {max-width:100%;}
   content: "";
   clear: both;
   display: table;
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 200%;
+    text-align: left;
+    padding: 0;
+  }
+
 }
 
 /* @media  (max-width: 1900px) {
