--- a/css/styles.css
+++ b/css/styles.css
@@ -65,13 +65,32 @@ img {max-width:100%;}
   display: none;
 }
 
+.filter {
+  text-align: center;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.filter input {
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+}
+
+
 .resize {
   /* max-width: 50%; */
   background-size: contain;
   box-shadow: 0 0 6px #C8A2C8;
   padding: 5px;
   margin: 5px;
-  height: 400px;
+  height: 350px;
 }
 
 .images {
