--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,13 @@ p {
   text-align: center;
 }
 
-img {max-width:100%;}
+img {
+  max-width:100%;
+}
+
+label {
+  cursor: pointer;
+}
 
 
 
@@ -41,6 +47,24 @@ img {max-width:100%;}
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+.menu {
+  position: absolute;
+  right: 4%;
+  top: 4%;
+  z-index: 1000;
+  cursor: pointer;
+}
+
+
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 4px;
+  background-color: #75aa40;
+  margin: 6px 0;
+  transition: 0.4s;
 }
 
 
@@ -61,6 +85,9 @@ img {max-width:100%;}
   text-align: center;
 }
 
+
+/* Checkboxes/JS targets */
+
 .checked {
   display: none;
 }
@@ -68,7 +95,6 @@ img {max-width:100%;}
 .filter {
   text-align: center;
   margin-bottom: 12px;
-  cursor: pointer;
   font-size: 22px;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -83,6 +109,8 @@ img {max-width:100%;}
   width: 18px;
 }
 
+
+/* Images */
 
 .resize {
   /* max-width: 50%; */
@@ -108,14 +136,18 @@ img {max-width:100%;}
   object-fit: contain;
 }
 
-.con1 {
+
+/* Recipe Names Overlay */
+
+.container {
   position: relative;
 }
 
 .description {
-  background: radial-gradient(#C8A2C8 50%, transparent 80%);
-  color: #598032;
-  font-weight: bolder;
+  background: radial-gradient(rgba(200,162,200,.7) 50%, transparent 80%);
+  color: #37521d;
+  font-weight: 900;
+  font-style: italic;
   padding: 10px 50px 10px 50px;
   position: absolute;
   bottom: 4px;
@@ -202,3 +234,4 @@ img {max-width:100%;}
     text-align: left;
     padding: 0;
   }
+}
