--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,16 @@
 html, body{
   margin: 0px;
   padding: 0px;
-  background: linear-gradient(transparent, #C8A2C8)
+  background: linear-gradient(transparent, #C8A2C8);
 }
 
+
 body {
-  padding-top: 100px
+  padding-top: 100px;
+  height: 100%;
+  position: relative;
 }
+
 
 h1 {
   color: #75aa40;
@@ -34,11 +38,16 @@ label {
   cursor: pointer;
 }
 
-
+.main-container {
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 100px; /* height of your footer */
+}
 
 .header {
   padding: 10px 16px;
-  /* background: bottom right url(../img/test.jpg); */
   background: linear-gradient(#C8A2C8 60%, transparent);
   background-size: cover;
   color: #f1f1f1;
@@ -191,8 +200,7 @@ label {
 /* End  about page */
 
 .footer {
-  position: relative;
-  left: 0;
+  position: absolute;
   bottom: 0;
   width: 100%;
   background-color: #c8a2b5;
