--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,8 @@ label {
   cursor: pointer;
 }
 
+/* Class Selectors */
+
 .main-container {
   min-height: 100vh; /* will cover the 100% of viewport */
   overflow: hidden;
